# notes-algorithms-design-in-c

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
Code Layout/: logarithms.c
include/: algorithms.h  common.h  data_structures.h  test_framework.h
src/Logarithms/: logarithms.c
